# todo-list-hackathon-phase-1

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  FIX_GITHUB_PR.md  GITHUB_PR_GUIDE.md  LICENSE  PROJECT_STATUS.md  PR_DESCRIPTION.md  QUICK_DEPLOY.md  QUICK_START.md  README.md  REQUIREMENTS_CHECKLIST.md  VIDEO_SCRIPT.md  demo.py  demo_run.py  deploy.sh  pyproject.toml  render.yaml  requirements.txt  run_cli.sh  run_web.py  test_cli.py  todo-list.md  web_demo.py
.claude/: settings.local.json
.claude/agents/: assessment_curator.md  auth_auditor.md  bom_configurator.md  chapter_composer.md  documentation_agent.md  latency_tuner.md  level_adjuster.md  qa_script_generator.md  security_enforcer.md  semantic_segmenter.md  urdu_localizer.md  vector_index_manager.md  visual_synthesizer.md
.claude/commands/: run-full-qa.md
.claude/skills/: action_sequencer.md  cicd_automation.md  docusaurus_navigator.md  e2e_test_runner.md  model_xml_tool.md  ros2_snippet_tool.md  user_profile_fetcher.md
.github/workflows/: test-and-deploy.yml
.specify/: README.md
.specify/memory/: constitution.md
.specify/templates/: adr-template.md  phr-template.prompt.md  spec-template.md
specs/: overview.md
specs/features/: add-task.md  delete-task.md  mark-complete.md  task-model.md  update-task.md  view-tasks.md
src/todo_app/: __init__.py  cli.py  exceptions.py  manager.py  models.py  ui.py  web.py
src/todo_app/templates/: index.html
tests/: __init__.py  test_manager.py  test_models.py
